...
                            Padding(
                              padding: EdgeInsets.symmetric(horizontal: 20.w),
                              child: Column(
                                children: [
                                  _ProfileMenuItem(
                                    icon: Icons.edit,
                                    title: 'Editar perfil',
                                    onTap: widget.onEditProfile,
                                  ),
                                  if ((widget.isAdmin || widget.isManager) &&
                                      widget.onEditCompany != null) ...[
                                    SizedBox(height: 12.h),
                                    _ProfileMenuItem(
...
                                              BorderRadius.circular(8.r),
                                        ),
                                        padding: EdgeInsets.symmetric(
                                            vertical: 14.h),
                                      ),
                                      child: Text(
                                        'Deletar conta',
                                        style: TextStyle(
                                          fontSize: 16.sp,
                                          fontWeight: FontWeight.w500,
                                        ),
                                      ),
                                    ),
...
